--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "Unlicense",
   "dependencies": {
-    "body-parser": "~1.5.0",
     "express": "~4.6.1",
+    "cors": "~2.4.2",
+    "body-parser": "~1.5.0",
     "uuid": "^1.4.1"
   },
   "devDependencies": {
