--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "~4.6.1",
     "cors": "~2.4.2",
     "body-parser": "~1.5.0",
-    "uuid": "^1.4.1"
+    "uuid": "^1.4.1",
+    "es6-promise": "~2.0.0"
   },
   "devDependencies": {
     "grunt-develop": "~0.4.0",
