--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "es6-promise": "~2.0.0"
   },
   "devDependencies": {
+    "grunt": "~0.4.5",
     "grunt-develop": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt": "~0.4.5"
+    "grunt-mocha-test": "~0.12.2",
+    "mocha": "~2.0.1",
+    "chai": "~1.10.0",
+    "supertest": "~0.14.0"
   }
 }
