--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "es6-promise": "~2.0.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-develop": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-mocha-test": "~0.12.2",
+    "gulp": "~3.8.10",
+    "gulp-mocha": "~1.1.1",
+    "gulp-util": "~3.0.1",
+    "gulp-develop-server": "~0.2.4",
     "mocha": "~2.0.1",
     "chai": "~1.10.0",
     "supertest": "~0.14.0"
