added test task to use with npm test

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "daemon.js",
   "scripts": {
     "start": "./node_modules/.bin/gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/gulp test"
   },
   "repository": {
     "type": "git",
