--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "cors": "~2.4.2",
     "body-parser": "~1.5.0",
     "uuid": "^1.4.1",
-    "es6-promise": "~2.0.0"
+    "es6-promise": "~2.0.0",
+    "cookie-parser": "~1.3.3",
+    "cookie-session": "~1.1.0",
+    "lodash": "~2.4.1",
+    "superagent": "~0.21.0"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
