--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cookie-parser": "~1.3.3",
     "cookie-session": "~1.1.0",
     "lodash": "~2.4.1",
-    "superagent": "~0.21.0"
+    "superagent": "~0.21.0",
+    "levelgraph": "~0.10.1"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
