--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "express": "~4.6.1",
     "cors": "~2.4.2",
     "body-parser": "~1.5.0",
+    "express-jwt": "~0.5.1",
+    "jsonwebtoken": "~1.2.0",
     "uuid": "^1.4.1",
     "es6-promise": "~2.0.0",
-    "cookie-parser": "~1.3.3",
-    "cookie-session": "~1.1.0",
     "lodash": "~2.4.1",
     "superagent": "~0.21.0",
     "levelgraph": "~0.10.1"
