--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "es6-promise": "~2.0.0",
     "lodash": "~2.4.1",
     "superagent": "~0.21.0",
-    "levelgraph": "~0.10.1"
+    "levelgraph": "~0.10.1",
+    "hbs": "~3.0.1",
+    "serve-static": "~1.9.2"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
@@ -32,6 +34,7 @@
     "gulp-util": "~3.0.1",
     "gulp-develop-server": "~0.2.4",
     "gulp-exit": "0.0.2",
+    "gulp-less": "~3.0.2",
     "mocha": "~2.0.1",
     "chai": "~1.10.0",
     "supertest": "~0.14.0"
