--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
   "author": "",
   "license": "Unlicense",
   "dependencies": {
-    "express": "~4.6.1",
-    "cors": "~2.4.2",
     "body-parser": "~1.5.0",
-    "express-jwt": "~0.5.1",
-    "jsonwebtoken": "~1.2.0",
-    "uuid": "^1.4.1",
+    "concat-stream": "^1.4.8",
+    "cors": "~2.4.2",
     "es6-promise": "~2.0.0",
-    "lodash": "~2.4.1",
-    "superagent": "~0.21.0",
-    "levelgraph": "~0.10.1",
+    "express": "~4.6.1",
+    "express-jwt": "~0.5.1",
+    "forkdb": "^9.1.1",
     "hbs": "~3.0.1",
-    "serve-static": "~1.9.2"
+    "jsonwebtoken": "~1.2.0",
+    "level": "^0.18.0",
+    "levelgraph": "~0.10.1",
+    "lodash": "~2.4.1",
+    "serve-static": "~1.9.2",
+    "superagent": "~0.21.0",
+    "uuid": "^1.4.1"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
